# fx3-cmake-example

./: README.md
example_2/: CMakeLists.txt  README.md
example_2/cmake/: FX3Macros.cmake  fx3-toolchain.cmake
example_2/demo_c/: CMakeLists.txt  cyfxbulkdscr.c  cyfxbulksrcsink.c  cyfxbulksrcsink.h
example_2/demo_c_1/: CMakeLists.txt  cyfxbulksrcsink.h  debug.h  dma.c  dma.h  main.c  power.c  power.h  types.h  usb_ctrl.c  usb_ctrl.h  usb_descriptors.c
example_2/demo_c_2/: CMakeLists.txt  a.bat  app.h  cyfxbulksrcsink.h  debug.c  debug.h  dma.c  dma.h  error_codes.h  main.c  power.c  power.h  system_config.h  types.h  usb_ctrl.c  usb_ctrl.h  usb_descriptors.c  usb_descriptors.h
example_2/demo_c_3/: CMakeLists.txt  debug.c  debug.h  dma.c  dma.h  error_codes.h  main.c  power.c  power.h  system_config.h  types.h  usb_ctrl.c  usb_ctrl.h  usb_descriptors.c  usb_descriptors.h
example_2/demo_cpp/: CMakeLists.txt
example_c/: .gitignore  CMakeLists.txt
example_c/cmake/: fx3.cmake
example_c/make/: fx3.ld
example_c/src/: cyfxbulklpautoenum.c  cyfxbulklpautoenum.h  cyfxbulklpdscr.c
example_cpp/: CMakeLists.txt  cyfxcppsyscall.cpp
example_cpp/cmake/: fx3.cmake
example_cpp/make/: fx3cpp.ld
example_cpp/src/: cyfxbulklpauto.cpp  cyfxbulklpauto.h  cyfxbulklpdscr.cpp
